syntax = "proto3";
package bitbadges.bitbadgeschain.badges;

import "google/protobuf/any.proto";
import "badges/transfers.proto";
import "badges/balances.proto";
import "badges/permissions.proto";
import "badges/metadata.proto";
import "badges/timelines.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/bitbadges/bitbadgeschain/x/badges/types";

message BadgeCollection {
  string collectionId = 1 [(gogoproto.customtype) = "Uint", (gogoproto.nullable) = false];
  string parentCollectionId = 2 [(gogoproto.customtype) = "Uint", (gogoproto.nullable) = false];
  repeated CollectionMetadataTimeline collectionMetadataTimeline = 3;
  repeated BadgeMetadataTimeline badgeMetadataTimeline = 4;
  string balancesType = 5 [(gogoproto.customtype) = "Uint", (gogoproto.nullable) = false];
  repeated OffChainBalancesMetadataTimeline offChainBalancesMetadataTimeline = 6;
  repeated InheritedBalancesTimeline inheritedBalancesTimeline = 7;
  repeated CustomDataTimeline customDataTimeline = 8;
  repeated ManagerTimeline managerTimeline = 9;
  CollectionPermissions permissions = 10;
  repeated CollectionApprovedTransferTimeline approvedTransfersTimeline = 11;
  string nextBadgeId = 12 [(gogoproto.customtype) = "Uint", (gogoproto.nullable) = false];
  repeated Balance unmintedSupplys = 13;
  repeated Balance totalSupplys = 14;
  repeated StandardTimeline standardsTimeline = 15;
  repeated IsArchivedTimeline isArchivedTimeline = 16;
  repeated ContractAddressTimeline contractAddressTimeline = 17;
  repeated UserApprovedOutgoingTransferTimeline defaultUserApprovedOutgoingTransfersTimeline = 18;
  repeated UserApprovedIncomingTransferTimeline defaultUserApprovedIncomingTransfersTimeline = 19;
}